settings: Fix overflow due to unset border-radius.

--- a/static/styles/image_upload_widget.css
+++ b/static/styles/image_upload_widget.css
@@ -21,6 +21,7 @@
         position: absolute;
         display: none;
         cursor: pointer;
+        border-radius: 5px;
     }
 
     .image-delete-button {
